[tool.poetry]
name = "rlnexto-python"
version = "1.0.0"
description = ""
authors = ["MarlburroW <nik0o@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
rlbot = "^1.67.7"
rlgym-compat = "^1.1.0"
numpy = "^1.26.4"
torch = "^2.2.2"
colorama = "^0.4.6"
prompt-toolkit = "^3.0.43"
pyinstaller = "^6.6.0"
rlsdk-python = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
